pick a file in the seven remaining languages